pyinfra-debug.log
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/main.py", line 225, in cli
    _main(*args, **kwargs)
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/main.py", line 354, in _main
    can_diff, state, config = _handle_commands(
                              ^^^^^^^^^^^^^^^^^
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/main.py", line 667, in _handle_commands
    state, config, operations = _prepare_deploy_operations(state, config, operations)
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/main.py", line 726, in _prepare_deploy_operations
    load_deploy_file(state, filename)
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/util.py", line 229, in load_deploy_file
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/util.py", line 223, in _parallel_load_hosts
    raise result
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/util.py", line 203, in load_file
    callback()
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/util.py", line 229, in <lambda>
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
                                        ^^^^^^^^^^^^^^^^^^^
  File "/Users/jd/dev/abi/gits/nephele-deploy/.venv/lib/python3.12/site-packages/pyinfra_cli/util.py", line 57, in exec_file
    code = compile(code_str, filename, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "1-deploy-karmada-on-kind.py", line 86
    print(f"{r}, {r!}, {type(r)}")
                    ^
SyntaxError: f-string: missing conversion character
